--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
 <body>
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo">{{ page }}</a>
+        <a href="#" class="brand-logo">{{ page.title }}</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="javascript:void(0);">Sass</a></li>
+            <li><a href="javascript:void(0);">Components</a></li>
+            <li><a href="javascript:void(0);">JavaScript</a></li>
         </ul>
     </div>
 </nav>
